--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                 <a href="PR17(Federalist Pig)/index.html" target="_blank">Project 17</a>
             </h3>
         </li>
+        <li>
+            <h3>
+                <a href="PR18(tailWindcss)/index.html" target="_blank">Project 18</a>
+            </h3>
+        </li>
     </ul>
 </body>
 
